image overlay on smaller viewport corrected

--- a/cocktailapi/src/Components/App/App.css
+++ b/cocktailapi/src/Components/App/App.css
@@ -92,8 +92,6 @@
     text-align: center;
     padding-left: 0.5em;
     padding-right: 0.5em;
-    margin-top: -2em;
-    margin-bottom: -2em;
 }
 
 .image {
